--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,500,900" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
   <main id="app">
-    <section class="intro">
-      <h1>moji</h1>
-      <h2>모으고 지키는 온라인 마케팅</h2>
-      <input type="text" name="domain-lookup" id="domain-lookup-text" placeholder="도메인을 입력해 주세요">
-      <button id="domain-lookup-btn">lookup!</button>
-    </section>
+    <div class="req">
+      <section class="intro">
+        <div>
+          <h1>moji</h1>
+          <h2>모으고 지키는 온라인 마케팅</h2>
+          <input type="text" name="domain-lookup" id="domain-lookup-text" placeholder="도메인을 입력해 주세요">
+          <button id="domain-lookup-btn">lookup!</button>
+        </div>
+      </section>
+    </div>
   </main>
   <script src="src/main.js"></script>
 </body>
