--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,500,900" rel="stylesheet">
 </head>
 <body>
-  dmoji.net
-  This site is under construction.
-  공사중입니다.
+  <p>dmoji.net</p>
+  <p>This site is under construction.</p>
+  <p>공사중입니다.</p>
 </body>
 </html>
