--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>moji | 모으고 지키는 온라인 마케팅</title>
+  <link rel="stylesheet" href="./scss/custom.scss">
 </head>
 <body>
   <div id="root"></div>
